@@ -4626,3 +4626,5 @@ $_LANG['No option has been selected!'] = 'Żadne opcje nie zostały zaznaczone!'
 $_LANG['Are you sure, you want to delete all selected options from database?'] = 'Jesteś pewien, że chcesz usunąć wszystkie wybrane opcje z bazy danych?';
 
 $_LANG['no connections'] = 'bez połączeń';
+
+$_LANG['Phone number validation failed!'] = 'Weryfikacja poprawności numeru telefonu nie powiodła się!';
